st:add and style wrapper section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="container-fluid wrapper display">
+      <div class="wrap-content display">
+        <img src="/images/logo/logo.png" alt="" />
+        <p>Welcome</p>
+        <p class="w-bold">To Delani Studio</p>
+        <p class="w-caption">
+          AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN AN AMAZING ENVIRONMENT
+        </p>
+      </div>
+    </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.js"></script>
