st:add and style about section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         </p>
       </div>
     </div>
-
+    <div class="about text-center py-5">
+      <p class="a-title bold ">ABOUT US</p>
+      <p>
+        When you work with us you are part of the team of committed
+        colaborators. All aspects of software development process are intergrated, interactive</br> and agile</br>Our approach unifies design, development and product management to create exceptional products.</br> We start each project by understanding your business goals, the user's needs and the product requirements</br> Then we help translate them into effective and elegant solutions.
+      </p>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.js"></script>
