--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         colaborators. All aspects of software development process are intergrated, interactive</br> and agile</br>Our approach unifies design, development and product management to create exceptional products.</br> We start each project by understanding your business goals, the user's needs and the product requirements</br> Then we help translate them into effective and elegant solutions.
       </p>
     </div>
+    <div class="services text-center text-white display">
+      <p class="bold">SERVICES</p>
+      <p>Before we sign a contract or write a line of code, our team will spend necessary time needed to understand your product vision </br> The outcome of this scoping session a proposal or high level statement of work </br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.js"></script>
