--- a/index.html
+++ b/index.html
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container-fluid wrapper display">
-      <div class="wrap-content display">
-        <img src="/images/logo/logo.png" alt="" />
-        <p>Welcome</p>
-        <p class="w-bold">To Delani Studio</p>
-        <p class="w-caption">
-          AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN AN AMAZING ENVIRONMENT
-        </p>
-      </div>
+        <div class="wrap-content display">
+            <img src="/images/logo/logo.png" alt="" />
+            <p>Welcome</p>
+            <p class="w-bold">To Delani Studio</p>
+            <p class="w-caption">
+                AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN AN AMAZING ENVIRONMENT
+            </p>
+        </div>
     </div>
     <div class="about text-center py-5">
-      <p class="a-title bold ">ABOUT US</p>
-      <p>
-        When you work with us you are part of the team of committed
-        colaborators. All aspects of software development process are intergrated, interactive</br> and agile</br>Our approach unifies design, development and product management to create exceptional products.</br> We start each project by understanding your business goals, the user's needs and the product requirements</br> Then we help translate them into effective and elegant solutions.
-      </p>
+        <p class="a-title bold ">ABOUT US</p>
+        <p>
+            When you work with us you are part of the team of committed colaborators. All aspects of software development process are intergrated, interactive</br> and agile</br>Our approach unifies design, development and product management to create
+            exceptional products.</br> We start each project by understanding your business goals, the user's needs and the product requirements</br> Then we help translate them into effective and elegant solutions.
+        </p>
     </div>
     <div class="services text-center text-white display">
-      <p class="bold">SERVICES</p>
-      <p>Before we sign a contract or write a line of code, our team will spend necessary time needed to understand your product vision </br> The outcome of this scoping session a proposal or high level statement of work </br> based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        <p class="bold">SERVICES</p>
+        <p>Before we sign a contract or write a line of code, our team will spend necessary time needed to understand your product vision </br> The outcome of this scoping session a proposal or high level statement of work </br> based on your requirements,
+            we can provide a complete offering or just the pieces you need.</p>
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+    <div class="container-fluid what-we-do display">
+        <p class=" bold ">WHAT WE DO</p>
+        <div class="row ">
+            <div class="col-lg-4 ">
+                <div class="card ">
+                    <img class="card-img-top " src="/images/services_icons/dev_icon.png " alt=" ">
+                    <div class="card-body ">
+                        <h4 class="card-title ">Design</h4>
+                        <p class="card-text ">Our design practice offers a full range of services</br>including brand strategy, interaction and visual design</br>and user experience testing </p>
+                        <p>Throughout your project, our desginers create and</br>implement visual design and workflows, solicit user feedback</br>and work with you to make sure what gets built</br>is what is needed.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 ">
+                <div class="card ">
+                    <img class="card-img-top " src="/images/services_icons/dev_icon.png " alt=" ">
+                    <div class="card-body ">
+                        <h4 class="card-title ">Development</h4>
+                        <p class="card-text ">All engineers are fluent in the latest enterprise, mobile</br>and web development technologies</p>
+                        <p>They collaborate with your team to write and improve</br>on a daily basis, using proven practices such as</br>test-driven development and pair programming</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 ">
+                <div class="card ">
+                    <img class="card-img-top " src="/images/services_icons/product_icon.png " alt=" ">
+                    <div class="card-body ">
+                        <h4 class="card-title ">Product Management</h4>
+                        <p class="card-text ">Planning and development is iterative.Because we are</br>constantly coding and testing the products we build are</br>always ready to go live. </p>
+                        <p>This iterative process allows for changes as business</br>requirements evolve</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <script src="js/jquery.min.js "></script>
+    <script src="js/bootstrap.min.js "></script>
+    <script src="js/popper.js "></script>
+    <script src="js/script.js "></script>
+</body>
+
 </html>
