--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             we can provide a complete offering or just the pieces you need.</p>
     </div>
     <div class="container-fluid what-we-do display">
-        <p class=" bold ">WHAT WE DO</p>
+        <p class="bold ">WHAT WE DO</p>
         <div class="row ">
             <div class="col-lg-4 ">
-                <div class="card ">
+                <div class="card display">
                     <img class="card-img-top " src="/images/services_icons/dev_icon.png " alt=" ">
-                    <div class="card-body ">
+                    <div class="card-body text-center">
                         <h4 class="card-title ">Design</h4>
                         <p class="card-text ">Our design practice offers a full range of services</br>including brand strategy, interaction and visual design</br>and user experience testing </p>
                         <p>Throughout your project, our desginers create and</br>implement visual design and workflows, solicit user feedback</br>and work with you to make sure what gets built</br>is what is needed.</p>
@@ -50,9 +50,9 @@
                 </div>
             </div>
             <div class="col-lg-4 ">
-                <div class="card ">
+                <div class="card display">
                     <img class="card-img-top " src="/images/services_icons/dev_icon.png " alt=" ">
-                    <div class="card-body ">
+                    <div class="card-body text-center">
                         <h4 class="card-title ">Development</h4>
                         <p class="card-text ">All engineers are fluent in the latest enterprise, mobile</br>and web development technologies</p>
                         <p>They collaborate with your team to write and improve</br>on a daily basis, using proven practices such as</br>test-driven development and pair programming</p>
@@ -60,9 +60,9 @@
                 </div>
             </div>
             <div class="col-lg-4 ">
-                <div class="card ">
+                <div class="card display ">
                     <img class="card-img-top " src="/images/services_icons/product_icon.png " alt=" ">
-                    <div class="card-body ">
+                    <div class="card-body  text-center">
                         <h4 class="card-title ">Product Management</h4>
                         <p class="card-text ">Planning and development is iterative.Because we are</br>constantly coding and testing the products we build are</br>always ready to go live. </p>
                         <p>This iterative process allows for changes as business</br>requirements evolve</p>
