--- a/index.html
+++ b/index.html
@@ -73,6 +73,43 @@
 
 
     </div>
+    <div class="portfolio">
+        <div class="row">
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work4.jpg" alt="">
+            </div>
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work3.jpg" alt="">
+            </div>
+
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work2.jpg" alt="">
+            </div>
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work1.jpg" alt="">
+
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work5.jpg" alt="">
+            </div>
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work6.jpg" alt="">
+            </div>
+
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work7.jpg" alt="">
+            </div>
+            <div class="col-lg-3">
+                <img src="/images/portfolio/work8.jpg" alt="">
+
+            </div>
+        </div>
+
+    </div>
+
 
 
     <script src="js/jquery.min.js "></script>
