st:style contact form

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <img src="/images/portfolio/work4.jpg" alt="">
+                <div class="container infor"></div>
             </div>
             <div class="col-lg-3">
                 <img src="/images/portfolio/work3.jpg" alt="">
@@ -107,10 +108,26 @@
 
             </div>
         </div>
-
     </div>
+    <div class="contact-us display ">
+        <p class="bold">CONTACT US</p>
+        <form class="form ">
+            <div class="grp1 display-f">
+                <div class="form-group">
 
+                    <input type="text" name="" id="" class="form-control" placeholder="Name..." aria-describedby="helpId">
+                </div>
+                <div class="form-group">
 
+                    <input type="email" name="" id="" class="form-control" placeholder="Email..." aria-describedby="helpId">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="text" name="message" id="message" class="form-control" placeholder="Your message here..." aria-describedby="helpId">
+            </div>
+        </form>
+    </div>
 
     <script src="js/jquery.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
