--- a/index.html
+++ b/index.html
@@ -130,42 +130,37 @@
             <div class="grp1 display-f">
                 <div class="form-group">
 
-                    <input type="text" name="" id="" class="form-control" placeholder="Name..." aria-describedby="helpId">
+                    <input type="text" name="" id="username" class="form-control" placeholder="Name..." aria-describedby="helpId">
                 </div>
                 <div class="form-group">
 
-                    <input type="email" name="" id="" class="form-control" placeholder="Email..." aria-describedby="helpId">
+                    <input type="email" name="" id="email" class="form-control" placeholder="Email..." aria-describedby="helpId">
                 </div>
             </div>
 
             <div class="form-group">
                 <input type="text" name="message" id="message" class="form-control" placeholder="Your message here..." aria-describedby="helpId">
             </div>
-            <div class="btn submit">SEND MESSAGE</div>
-        </form>
-        <!-- Button trigger modal -->
-        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> -->
+            <div class="btn submit" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">SEND MESSAGE</div>
+            <!-- Modal -->
+            <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        ...
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                            <div class="modal-body">
+                                <i class="fa-solid fa-circle-check"></i>
+                                <p class="popmsg"></p>
+                                <!-- <P>Victoria we have received your message. Thank you for reaching out to us!</P> -->
+                            </div>
+
+                        </div>
                     </div>
                 </div>
+
             </div>
-        </div>
+        </form>
+
     </div>
     <div class="social display">
         <div class="icons">
