feat: toggle between image and more infor

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="row ">
             <div class="col-lg-4 ">
                 <div class="card display">
-                    <img id="" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
+                    <img id="s-icon1" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
                     <div class="card-body text-center">
                         <h4 class="card-title ">Design</h4>
-                        <div class="card-text " data-page="moreInfor">
+                        <div class="card-text txt1 " data-page="moreInfor">
                             <p>Our design practice offers a full range of services</br>including brand strategy, interaction and visual design</br>and user experience testing </p>
                             <p>Throughout your project, our desginers create and</br>implement visual design and workflows, solicit user feedback</br>and work with you to make sure what gets built</br>is what is needed.</p>
                         </div>
@@ -54,10 +54,10 @@
             </div>
             <div class="col-lg-4 ">
                 <div class="card display">
-                    <img id="" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
+                    <img id="s-icon2" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
                     <div class="card-body text-center">
                         <h4 class="card-title ">Development</h4>
-                        <div class="card-text" data-page="moreInfor">
+                        <div class="card-text txt2" data-page="moreInfor">
                             <p>All engineers are fluent in the latest enterprise, mobile</br>and web development technologies</p>
                             <p>They collaborate with your team to write and improve</br>on a daily basis, using proven practices such as</br>test-driven development and pair programming</p>
                         </div>
@@ -67,10 +67,10 @@
             </div>
             <div class="col-lg-4 ">
                 <div class="card display ">
-                    <img id="" class="card-img-top s-icon" src="/images/services_icons/product_icon.png " alt=" ">
+                    <img id="s-icon3" class="card-img-top s-icon" src="/images/services_icons/product_icon.png " alt=" ">
                     <div class="card-body  text-center">
                         <h4 class="card-title ">Product Management</h4>
-                        <div class="card-text">
+                        <div class="card-text txt3">
                             <p>Planning and development is iterative.Because we are</br>constantly coding and testing the products we build are</br>always ready to go live. </p>
                             <p>This iterative process allows for changes as business</br>requirements evolve</p>
                         </div>
@@ -147,19 +147,23 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
+                            <div class="modal-header">
 
-                            <div class="modal-body">
-                                <i class="fa-solid fa-circle-check"></i>
-                                <p class="popmsg"></p>
-                                <!-- <P>Victoria we have received your message. Thank you for reaching out to us!</P> -->
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-
                         </div>
+                        <div class="modal-body">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-solid fa-rectangle-xmark"></i>
+                            <p class="popmsg"></p>
+                        </div>
+
                     </div>
                 </div>
-
             </div>
-        </form>
+
+    </div>
+    </form>
 
     </div>
     <div class="social display">
