st:style the more infor section in portfolio

--- a/index.html
+++ b/index.html
@@ -86,39 +86,61 @@
         <p class="bold">PORTFOLIO</p>
         <div class="row">
             <div class="col-lg-3 back-img">
+                <div class=" infor col-lg-3">
+                    <p> BLACK EXCELLENCE</p>
+                </div>
+
                 <img src="/images/portfolio/work4.jpg" alt="">
 
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p> ONTARIO SECURITY</p>
+                </div>
                 <img src="/images/portfolio/work3.jpg" alt="">
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>THE</br> POLYGONS</p>
+                </div>
                 <img src="/images/portfolio/work2.jpg" alt="">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>VICTORIA<br> MOVIES</p>
+                </div>
                 <img src="/images/portfolio/work1.jpg" alt="">
 
             </div>
-            <div class="container infor col-lg-3"> </div>
-            <div class="container infor col-lg-3"> </div>
-            <div class="container infor col-lg-3"> </div>
-            <div class="container infor col-lg-3"> </div>
+
         </div>
         <div class="row">
 
-            <div class="col-lg-3">
-                <img src="/images/portfolio/work5.jpg" alt="">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>DEAR</br> DIARY</p>
+                </div>
+                <img class="hovered" src="/images/portfolio/work5.jpg" alt="">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>THE</br> MENU</p>
+                </div>
                 <img src="/images/portfolio/work6.jpg" alt="">
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>BURNED</br>LOGO</p>
+                </div>
                 <img src="/images/portfolio/work7.jpg" alt="">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 back-img">
+                <div class="infor col-lg-3">
+                    <p>GIRRAFFE</br> RESTAURANT</p>
+                </div>
                 <img src="/images/portfolio/work8.jpg" alt="">
 
             </div>
