feat:add class on hovering portfolio

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <div class="portfolio display">
         <p class="bold">PORTFOLIO</p>
         <div class="row">
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img1">
+                <div class="infor col-lg-3" id="infors1">
                     <p> BLACK EXCELLENCE</p>
                 </div>
 
@@ -94,21 +94,21 @@
 
             </div>
 
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img2">
+                <div class="infor col-lg-3" id="infors2">
                     <p> ONTARIO SECURITY</p>
                 </div>
                 <img src="/images/portfolio/work3.jpg" alt="">
             </div>
 
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img3">
+                <div class="infor col-lg-3" id="infors3">
                     <p>THE</br> POLYGONS</p>
                 </div>
                 <img src="/images/portfolio/work2.jpg" alt="">
             </div>
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img4">
+                <div class="infor col-lg-3" id="infors4">
                     <p>VICTORIA<br> MOVIES</p>
                 </div>
                 <img src="/images/portfolio/work1.jpg" alt="">
@@ -118,27 +118,27 @@
         </div>
         <div class="row">
 
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img5">
+                <div class="infor col-lg-3" id="infors5">
                     <p>DEAR</br> DIARY</p>
                 </div>
                 <img class="hovered" src="/images/portfolio/work5.jpg" alt="">
             </div>
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img6">
+                <div class="infor col-lg-3" id="infors6">
                     <p>THE</br> MENU</p>
                 </div>
                 <img src="/images/portfolio/work6.jpg" alt="">
             </div>
 
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img7">
+                <div class="infor col-lg-3" id="infors7">
                     <p>BURNED</br>LOGO</p>
                 </div>
                 <img src="/images/portfolio/work7.jpg" alt="">
             </div>
-            <div class="col-lg-3 back-img">
-                <div class="infor col-lg-3">
+            <div class="col-lg-3 back-img" id="back-img8">
+                <div class="infor col-lg-3" id="infors8">
                     <p>GIRRAFFE</br> RESTAURANT</p>
                 </div>
                 <img src="/images/portfolio/work8.jpg" alt="">
