st:add cancel button on modal

--- a/index.html
+++ b/index.html
@@ -165,19 +165,18 @@
             </div>
             <div class="btn submit" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">SEND MESSAGE</div>
             <!-- Modal -->
-            <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade " id="exampleModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <div class="modal-header">
 
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                        </div>
                         <div class="modal-body">
                             <i class="fa-solid fa-circle-check"></i>
                             <i class="fa-solid fa-rectangle-xmark"></i>
                             <p class="popmsg"></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" id="close " class="btn btn-secondary" onclick="javascript:window.location.reload()" data-bs-dismiss="modal">Close</button>
+
                         </div>
 
                     </div>
