--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-lg-3 back-img" id="back-img1">
                 <div class="infor col-lg-3" id="infors1">
-                    <p> BLACK EXCELLENCE</p>
+                    <p> BLACK</br> EXCELLENCE</p>
                 </div>
 
                 <img src="/images/portfolio/work4.jpg" alt="">
@@ -98,7 +98,7 @@
 
             <div class="col-lg-3 back-img" id="back-img2">
                 <div class="infor col-lg-3" id="infors2">
-                    <p> ONTARIO SECURITY</p>
+                    <p> ONTARIO</br> SECURITY</p>
                 </div>
                 <img src="/images/portfolio/work3.jpg" alt="">
             </div>
