st:modify image path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid wrapper display">
         <div class="wrap-content display">
-            <img src="/images/logo/logo.png" alt="" />
+            <img src="./images/logo/logo.png" alt="" />
             <p>Welcome</p>
             <p class="w-bold">To Delani Studio</p>
             <p class="w-caption">
@@ -41,7 +41,7 @@
         <div class="row ">
             <div class="col-lg-4 ">
                 <div class="card display">
-                    <img id="s-icon1" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
+                    <img id="s-icon1" class="card-img-top s-icon" src="./images/services_icons/dev_icon.png " alt=" ">
                     <div class="card-body text-center">
                         <h4 class="card-title ">Design</h4>
                         <div class="card-text txt1 " data-page="moreInfor">
@@ -55,7 +55,7 @@
             </div>
             <div class="col-lg-4 ">
                 <div class="card display">
-                    <img id="s-icon2" class="card-img-top s-icon" src="/images/services_icons/dev_icon.png " alt=" ">
+                    <img id="s-icon2" class="card-img-top s-icon" src="./images/services_icons/dev_icon.png " alt=" ">
                     <div class="card-body text-center">
                         <h4 class="card-title ">Development</h4>
                         <div class="card-text txt2" data-page="moreInfor">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-lg-4 ">
                 <div class="card display ">
-                    <img id="s-icon3" class="card-img-top s-icon" src="/images/services_icons/product_icon.png " alt=" ">
+                    <img id="s-icon3" class="card-img-top s-icon" src="./images/services_icons/product_icon.png " alt=" ">
                     <div class="card-body  text-center">
                         <h4 class="card-title ">Product Management</h4>
                         <div class="card-text txt3">
@@ -92,7 +92,7 @@
                     <p> BLACK</br> EXCELLENCE</p>
                 </div>
 
-                <img src="/images/portfolio/work4.jpg" alt="">
+                <img src="./images/portfolio/work4.jpg" alt="">
 
             </div>
 
@@ -100,20 +100,20 @@
                 <div class="infor col-lg-3" id="infors2">
                     <p> ONTARIO</br> SECURITY</p>
                 </div>
-                <img src="/images/portfolio/work3.jpg" alt="">
+                <img src="./images/portfolio/work3.jpg" alt="">
             </div>
 
             <div class="col-lg-3 back-img" id="back-img3">
                 <div class="infor col-lg-3" id="infors3">
                     <p>THE</br> POLYGONS</p>
                 </div>
-                <img src="/images/portfolio/work2.jpg" alt="">
+                <img src="./images/portfolio/work2.jpg" alt="">
             </div>
             <div class="col-lg-3 back-img" id="back-img4">
                 <div class="infor col-lg-3" id="infors4">
                     <p>VICTORIA<br> MOVIES</p>
                 </div>
-                <img src="/images/portfolio/work1.jpg" alt="">
+                <img src="./images/portfolio/work1.jpg" alt="">
 
             </div>
 
@@ -124,26 +124,26 @@
                 <div class="infor col-lg-3" id="infors5">
                     <p>DEAR</br> DIARY</p>
                 </div>
-                <img class="hovered" src="/images/portfolio/work5.jpg" alt="">
+                <img class="hovered" src="./images/portfolio/work5.jpg" alt="">
             </div>
             <div class="col-lg-3 back-img" id="back-img6">
                 <div class="infor col-lg-3" id="infors6">
                     <p>THE</br> MENU</p>
                 </div>
-                <img src="/images/portfolio/work6.jpg" alt="">
+                <img src="./images/portfolio/work6.jpg" alt="">
             </div>
 
             <div class="col-lg-3 back-img" id="back-img7">
                 <div class="infor col-lg-3" id="infors7">
                     <p>BURNED</br>LOGO</p>
                 </div>
-                <img src="/images/portfolio/work7.jpg" alt="">
+                <img src="./images/portfolio/work7.jpg" alt="">
             </div>
             <div class="col-lg-3 back-img" id="back-img8">
                 <div class="infor col-lg-3" id="infors8">
                     <p>GIRRAFFE</br> RESTAURANT</p>
                 </div>
-                <img src="/images/portfolio/work8.jpg" alt="">
+                <img src="./images/portfolio/work8.jpg" alt="">
 
             </div>
         </div>
