--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p class="w-caption">
                 AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN AN AMAZING ENVIRONMENT
             </p>
+            <svg class="wrapper-btn" aria-hidden="true" role="img" width="0.88em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 448 512"><g transform="rotate(180 224 256)"><path fill="#837563" d="M384 0H64C28.65 0 0 28.65 0 64v384c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V64c0-35.35-28.7-64-64-64zM224 464c-17.75 0-32-14.25-32-32s14.25-32 32-32s32 14.25 32 32s-14.2 32-32 32z"/></g></svg>
         </div>
     </div>
     <div class="about text-center py-5">
