--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
     </div>
     <div class="social display">
         <div class="icons">
-            <img src="/images/social_icons/twitter.png" alt="">
-            <img src="/images/social_icons/dribble.png" alt="">
-            <img src="/images/social_icons/facebook.png" alt="">
-            <img src="/images/social_icons/g_plus.png" alt="">
-            <img src="/images/social_icons/skype.png" alt="">
-            <img src="/images/social_icons/stumble_upon.png" alt="">
-            <img src="/images/social_icons/behance.png" alt="">
-            <img src="/images/social_icons/pinterest.png" alt="">
-            <img src="/images/social_icons/flickr.png" alt="">
+            <img src="./images/social_icons/twitter.png" alt="">
+            <img src="./images/social_icons/dribble.png" alt="">
+            <img src="./images/social_icons/facebook.png" alt="">
+            <img src="./images/social_icons/g_plus.png" alt="">
+            <img src="./images/social_icons/skype.png" alt="">
+            <img src="./images/social_icons/stumble_upon.png" alt="">
+            <img src="./images/social_icons/behance.png" alt="">
+            <img src="./images/social_icons/pinterest.png" alt="">
+            <img src="./images/social_icons/flickr.png" alt="">
         </div>
         <p>Dilian Studio</p>
         <p>2019</p>
